# Architecture-as-Code

./: .gitignore  LICENSE  README.md  architecture.json  main.py  pyproject.toml
bridge/: __init__.py  csv_to_latex.py  explore_req_eval.py  extract_architecture.py  generate_ros2.py  regen_demos.py  run_demo.py  strip_docs.py
debug/: blog_demo.sysml  sequence_example.sysml  sfriedenthal_Flashlight_Starter_Model-25-07-21.sysml  test.sysml  test01_minimal.sysml  test02_typed_parts.sysml  test03_with_view.sysml  test04_occurrence_def.sysml  test05_item_messages.sysml  test06_blog_replica.sysml  test07_omg_pubsub.sysml  test08_package_level.sysml  test09_occurrence.sysml  test10_bidirectional.sysml  test11_typed_messages.sysml  test12_simonas_sequence.sysml  test13_def_vs_usage.sysml  test14_then_message.sysml  test15_view_patterns.sysml  test16_advanced_constructs.sysml  test17_satisfy_rendering.sysml  test18_crosspillar_view.sysml  test19_topology_depth.sysml  test21_filter_syntax.sysml
demos/: RUNBOOK.md
studies/: endurance_trade_study.py
syside-demos/: SysideViews.sysml  showcase_agr.sysml  showcase_agr_full.sysml  showcase_agr_grid_views.sysml  showcase_agr_nav2.sysml  showcase_agr_nav2_full.sysml  uav_behaviors.sysml
tests/: consumer_test_robot.sysml  demo_auto_equinox.py  demo_equinox_autodiff.py  explore_connection_endpoints.py  explore_syside_api.py  render_pytree_treescope.py  run_transition_syntax_test.py  smoke_test_automator.py  test_bridge_pipeline.py  test_consumer.py  test_cpp_generation.py  test_extract_requirements.py  test_gen_sequence.py  (+9 more)
(+157 files in other folders)
