[project]
name = "architecture-as-code"
version = "0.1.0"
description = "A SysML v2 domain library and bridge pipeline for ROS2 robotics systems"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [
    { name = "Sai Sandeep Damera", email = "sdamera@umd.edu" },
]
keywords = [
    "sysml",
    "sysml-v2",
    "ros2",
    "mbse",
    "model-based-systems-engineering",
    "robotics",
    "code-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "jinja2>=3.1.6",
]

[project.urls]
Homepage = "https://github.com/sdamera95/Architecture-as-Code"
Repository = "https://github.com/sdamera95/Architecture-as-Code"
Issues = "https://github.com/sdamera95/Architecture-as-Code/issues"
